refactor(facade): substitui 'collect(toList())' por  'toList()' no metodo 'findAnimaisWithoutReturn'